feat : 경기천년바탕 폰트 추가

--- a/caffhheiene/public/fonts/font.css
+++ b/caffhheiene/public/fonts/font.css
@@ -7,3 +7,8 @@
   font-family: 'Magnolia';
   src: url('Magnolia\ Script.otf');
 }
+
+@font-face {
+  font-family: 'Gyeonggi_Rg';
+  src: url('경기천년바탕_Regular.ttf');
+}
